rabbit/manifests/statefulset.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    matchLabels:
      app: rabbitmq # has to match .spec.template.metadata.labels
  serviceName: "rabbitmq"
  replicas: 3 # by default is 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: rabbitmq
      labels:
        app: rabbitmq # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: "/var/lib/rabbitmq"
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
