rabbit/manifests/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: http
    protocol: TCP
    port: 15672
    targetPort: 15672
---
